# GPUE

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  acknowledgements.md  paper.bib  paper.md
docs/: gpue_doxy.conf
include/: XGetopt.h  ds.h  dynamic.h  evolution.h  fileIO.h  init.h  kernels.h  operators.h  parser.h  split_op.h  tracker.h  vort.h  vortex_3d.h
julia/: calc_energy.jl
py/: en.py  extract_gauge.py  find_scissors_angle.py  gen_data.py  hist3d.py  mpi_vis.py  observables.py  paraview_plot.py  plot.py  scissors.py  scissors_0.py  scissors_check.py  script1.py  stats.py  vis.py  vis_scripts.py  visualize_3d.py  vort.py
src/: VtxTest.cc  XGetopt.cpp  ds.cc  ds.cu  dynamic.cu  evolution.cu  example.cfg  fileIO.cc  helpfile  init.cu  kernels.cu  lattice.cu  manip.cu  minions.cu  operators.cc  operators.cu  parser.cc  parser.cu  print_help.sh  split_op.cu  tracker.cc  tracker.cu  unit_test.cu  vort.cc  vortex_3d.cu
